Fix: nome da página

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css"
     />
-    <title>Fornalha atacante</title>
+    <title>Fornalha ofensiva</title>
   </head>
   <body>
     <header class="header">
