--- a/index.html
+++ b/index.html
@@ -11,22 +11,49 @@
     <title>Fornalha ofensiva</title>
   </head>
   <body>
-    <header class="header">
-      <div class="logo">
-        <img src="assets/imgs/logo/logo.webp" alt="Logo fornalha ofensiva" />
-      </div>
-      <nav>
-        <ul class="header-links">
-          <li><a class="navbar-link" href="#">Início</a></li>
-          <li><a class="navbar-link" href="#">Localização</a></li>
-          <li><a class="navbar-link" href="#">Cardápio</a></li>
-          <li><a class="navbar-link" href="#">Contato</a></li>
-        </ul>
-      </nav>
-      <div class="header-icons">
-        <i class="fi fi-rr-search"></i>
-        <i class="fi fi-rr-menu-burger"></i>
+    <header>
+      <div class="header">
+        <div class="logo">
+          <img src="assets/imgs/logo/logo.webp" alt="Logo fornalha ofensiva" />
+        </div>
+        <nav>
+          <ul class="header-links">
+            <li><a class="navbar-link" href="#">Início</a></li>
+            <li><a class="navbar-link" href="#">Localização</a></li>
+            <li><a class="navbar-link" href="#">Cardápio</a></li>
+            <li><a class="navbar-link" href="#">Contato</a></li>
+          </ul>
+        </nav>
+        <div class="header-icons">
+          <i class="fi fi-rr-search"></i>
+          <i class="fi fi-rr-menu-burger"></i>
+        </div>
       </div>
     </header>
+    <main>
+      <section>
+        <div>
+          <div>
+            <h1>Aqui você encontrará a melhor pizza do mundo</h1>
+          </div>
+          <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+            architecto facere reiciendis consequuntur est obcaecati nemo nisi at
+            distinctio, perspiciatis aliquam nobis, voluptatum ex unde. Tempora.
+          </div>
+          <div>
+            <button>Veja o Menu</button>
+          </div>
+        </div>
+        <div>
+          <img
+            src="./assets/imgs/main/pizza-main.jpeg"
+            alt="Pizza main"
+            loading="lazy"
+            decoding="async"
+          />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
