Home: section finalizada

--- a/index.html
+++ b/index.html
@@ -32,26 +32,37 @@
     </header>
     <main>
       <section>
-        <div>
-          <div>
-            <h1>Aqui você encontrará a melhor pizza do mundo</h1>
+        <div class="interface">
+          <div class="text-container-main">
+            <div>
+              <h1 class="title-main">
+                Aqui você encontrará a
+                <strong class="special-mark">melhor pizza</strong> do
+                <br />mundo!
+              </h1>
+            </div>
+            <div class="text">
+              Experimente o sabor irresistível da Fornalha Ofensiva! 🍕 <br>Aqui,
+              cada pizza é uma obra-prima, feita com ingredientes selecionados e
+              assada com paixão. Perfeita para compartilhar bons momentos, nossa
+              pizzaria combina tradição e inovação em cada fatia. Venha
+              descobrir por que somos a escolha número um dos apaixonados por
+              pizza!
+            </div>
+            <div>
+              <button class="button">Veja o Menu</button>
+            </div>
           </div>
-          <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
-            architecto facere reiciendis consequuntur est obcaecati nemo nisi at
-            distinctio, perspiciatis aliquam nobis, voluptatum ex unde. Tempora.
+          <div class="container-img">
+            <img
+              class="img-main"
+              src="./assets/imgs/main/pizza-main.png"
+              alt="Pizza main"
+              loading="lazy"
+              decoding="async"
+            />
+            <div class="circle-effect"></div>
           </div>
-          <div>
-            <button>Veja o Menu</button>
-          </div>
-        </div>
-        <div>
-          <img
-            src="./assets/imgs/main/pizza-main.jpeg"
-            alt="Pizza main"
-            loading="lazy"
-            decoding="async"
-          />
         </div>
       </section>
     </main>
