--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <div class="circle-effect"></div>
           </div>
         </div>
+        <!-- Cards aqui -->
       </section>
     </main>
   </body>
