--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
               </h1>
             </div>
             <div class="text">
-              Experimente o sabor irresistível da Fornalha Ofensiva! 🍕 <br>Aqui,
-              cada pizza é uma obra-prima, feita com ingredientes selecionados e
-              assada com paixão. Perfeita para compartilhar bons momentos, nossa
-              pizzaria combina tradição e inovação em cada fatia. Venha
-              descobrir por que somos a escolha número um dos apaixonados por
-              pizza!
+              Experimente o sabor irresistível da Fornalha Ofensiva! 🍕
+              <br />Aqui, cada pizza é uma obra-prima, feita com ingredientes
+              selecionados e assada com paixão. Perfeita para compartilhar bons
+              momentos, nossa pizzaria combina tradição e inovação em cada
+              fatia. Venha descobrir por que somos a escolha número um dos
+              apaixonados por pizza!
             </div>
             <div>
               <button class="button">Veja o Menu</button>
@@ -65,6 +65,69 @@
           </div>
         </div>
         <!-- Cards aqui -->
+        <div class="cards-container">
+          <div class="card">
+            <div>
+              <img
+                class="img-card"
+                src="assets/imgs/main/card/pizza-pepperoni.png"
+                alt="Foto de pizza"
+              />
+            </div>
+            <div>
+              <h3>Pizza de pepperoni</h3>
+            </div>
+            <div>
+              <p><span class="special-mark">R$</span> 43,50</p>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+              style="margin: 8px 0px 27px 0;"
+                class="img-card"
+                src="assets/imgs/main/card/pizza-moda-casa.png"
+                alt="Foto de pizza"
+              />
+            </div>
+            <div>
+              <h3>Pizza moda da casa</h3>
+            </div>
+            <div>
+              <p><span class="special-mark">R$</span> 35,50</p>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="img-card"
+                src="assets/imgs/main/card/pizza-australiana.png"
+                alt="Foto de pizza"
+              />
+            </div>
+            <div>
+              <h3>Pizza australiana</h3>
+            </div>
+            <div>
+              <p><span class="special-mark">R$</span> 49,99</p>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="img-card"
+                src="assets/imgs/main/card/pizza-havaiana.png"
+                alt="Foto de pizza"
+              />
+            </div>
+            <div>
+              <h3>Pizza havaiana</h3>
+            </div>
+            <div>
+              <p><span class="special-mark">R$</span> 27,50</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
