ADD singular colors

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <!-- Cards aqui -->
         <div class="cards-container">
-          <div class="card">
+          <div class="card green">
             <div>
               <img
                 class="img-card"
@@ -81,10 +81,10 @@
               <p><span class="special-mark">R$</span> 43,50</p>
             </div>
           </div>
-          <div class="card">
+          <div class="card rose">
             <div>
               <img
-              style="margin: 8px 0px 27px 0;"
+              style="margin: 10px 0px 17px 0;"
                 class="img-card"
                 src="assets/imgs/main/card/pizza-moda-casa.png"
                 alt="Foto de pizza"
@@ -97,7 +97,7 @@
               <p><span class="special-mark">R$</span> 35,50</p>
             </div>
           </div>
-          <div class="card">
+          <div class="card yellow">
             <div>
               <img
                 class="img-card"
@@ -112,7 +112,7 @@
               <p><span class="special-mark">R$</span> 49,99</p>
             </div>
           </div>
-          <div class="card">
+          <div class="card pink">
             <div>
               <img
                 class="img-card"
