--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav>
           <ul class="header-links">
-            <li><a class="navbar-link" href="#">Início</a></li>
+            <li><a class="navbar-link active" href="#">Início</a></li>
             <li><a class="navbar-link" href="#">Localização</a></li>
             <li><a class="navbar-link" href="#">Cardápio</a></li>
             <li><a class="navbar-link" href="#">Contato</a></li>
@@ -38,16 +38,21 @@
               <h1 class="title-main">
                 Aqui você encontrará a
                 <strong class="special-mark">melhor pizza</strong> do
-                <br />mundo!
+                <br /><span class="special-mark-color">mundo!</span>
               </h1>
             </div>
             <div class="text">
-              Experimente o sabor irresistível da Fornalha Ofensiva! 🍕
-              <br />Aqui, cada pizza é uma obra-prima, feita com ingredientes
-              selecionados e assada com paixão. Perfeita para compartilhar bons
-              momentos, nossa pizzaria combina tradição e inovação em cada
-              fatia. Venha descobrir por que somos a escolha número um dos
-              apaixonados por pizza!
+              Experimente o sabor irresistível da
+              <strong class="special-mark-color"
+                ><i>Fornalha Ofensiva!</i></strong
+              >
+              🍕 <br />Aqui, cada pizza é uma
+              <strong class="special-mark-color">obra-prima</strong>, feita com
+              ingredientes selecionados e assada com paixão. Perfeita para
+              compartilhar bons momentos, nossa pizzaria combina
+              <strong class="special-mark-color">tradição e inovação</strong> em
+              cada fatia. Venha descobrir por que somos a escolha número um dos
+              apaixonados por <strong class="special-mark-color">pizza!</strong>
             </div>
             <div>
               <button class="button">Veja o Menu</button>
@@ -84,7 +89,7 @@
           <div class="card rose">
             <div>
               <img
-              style="margin: 10px 0px 17px 0;"
+                style="margin: 10px 0px 17px 0"
                 class="img-card"
                 src="assets/imgs/main/card/pizza-moda-casa.png"
                 alt="Foto de pizza"
